# DistributedSim

./: pyproject.toml  setup_old.py
src/distributedsim/: __init__.py  sim_builder.py
src/distributedsim/gradient_strategy/: gradient_strategy.py
