[project]
name = "distributedsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OliverT1", email = "oturnbull1@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["DistributedSim"]